# mgw_pam

./: README.txt
c_src/: CBaseProto.cpp  CBaseProto.h  CLocalProto.cpp  CLocalProto.h  CMakeLists.txt  CRadProto.cpp  CRadProto.h  CTacPlusProto.cpp  CTacPlusProto.h  README.txt  main.cpp  pamlogin.h
src/: mgw_pam.erl  pam_genserver.erl
